overflow fixed

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -17,6 +17,8 @@ body{
 	font-family: 'EB Garamond', serif;
 	text-align: center;
 	color: black;
+	width: 100%;
+	overflow-x: hidden;
 }
 
 hr{
